<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputCorreo"
            android:layout_width="326dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:hint="@string/introduce_tu_correo"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:text="@string/numero_de_cafes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCorreo" />

        <EditText
            android:id="@+id/numero_de_cafes"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="28dp"
            android:text="@string/tipo_de_servicio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numero_de_cafes" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="266dp"
            android:layout_height="159dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <RadioButton
                android:id="@+id/barra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/comsumo_en_barra" />

            <RadioButton
                android:id="@+id/llevar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/para_llevar" />

            <RadioButton
                android:id="@+id/terraza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consumo_en_terraza" />
        </RadioGroup>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch1"
            android:layout_width="335dp"
            android:layout_height="34dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="28dp"
            android:text="@string/con_helado_0_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <Button
            android:id="@+id/button"
            android:layout_width="342dp"
            android:layout_height="41dp"
            android:text="@string/continuar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>